add second display for full equation

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="calcBody">
-        <input type="text" class="inputBox">
+        <input type="text" id="fullEquation">
+        <input type="text" id="currentOperation">
         <div class="buttons">
             <div class="row">
                 <button class="calcBTN acBTN">AC</button>
