add percentage button functionality

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="buttons">
             <div class="row">
                 <button class="calcBTN acBTN">AC</button>
-                <button class="calcBTN operatorBTN" id="bracketsBTN">()</button>
-                <button class="calcBTN operatorBTN" id="percentageBTN">%</button>
+                <button class="calcBTN" id="bracketsBTN">()</button>
+                <button class="calcBTN" id="percentageBTN">%</button>
                 <button class="calcBTN operatorBTN">/</button>
             </div>
             
