--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <button class="calcBTN numBTN">0</button>
                 <button class="calcBTN">.</button>
-                <button class="calcBTN">Backspace</button>
+                <button class="calcBTN" id="backspaceBTN">Backspace</button>
                 <button class="calcBTN equalsBTN">=</button>
             </div>
         </div>
