add backspace functionality

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             
             <div class="row">
                 <button class="calcBTN numBTN">0</button>
-                <button class="calcBTN">.</button>
+                <button class="calcBTN numBTN">.</button>
                 <button class="calcBTN" id="backspaceBTN">Backspace</button>
                 <button class="calcBTN equalsBTN">=</button>
             </div>
